[package]
name = "BitBastion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"  # For the SHA-256 hashing algorithm
aes-gcm = "0.10" # For AES-GCM encryption
aes = "0.7"      # For the AES block cipher
rand = "0.8"
generic-array = "0.14"